# botier

./: .readthedocs.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish-to-pypi.yml
docs/: Makefile  botier.rst  modules.rst
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/api_reference/: botier.auxiliary_objective.rst  botier.hierarchy_scalarization_objective.rst  botier.hierarchy_scalarizer.rst  botier.rst  botier.utils.rst  modules.rst
docs/source/citation/: cite.rst
docs/source/intro/: installation.rst  overview.rst
docs/source/usage/: tutorial.rst
experiments/: experiment_todo.txt  requirements.txt  run_benchmark.py
experiments/benchmark_problems/: analytical_problems.py  emulated_problems.py
experiments/reference_methods/: chimera_wrapper.py  penalty_scalarization.py
experiments/utils/: campaign_plotting_utils.py  logging_utils.py  recommendation.py  surface_plotting_utils.py
src/botier/: __init__.py  auxiliary_objective.py  hierarchy_scalarization_objective.py  hierarchy_scalarizer.py  utils.py
tests/: test_auxiliary_objective.py  test_hierarchy_scalarization_objective.py  test_hierarchy_scalarizer.py  test_utils.py
