[metadata]
name = botier
version = 1.0.0
author = Felix Strieth-Kalthoff
license = MIT
url = https://www.github.com/fsk-lab/botier

[options]
package = botier
python_requires = >=3.7
install_requires =
    torch
    gpytorch
    botorch
    pandas

package_dir =
    =src

[options.packages.find]
where=src
